# hsubconvert

./: .gitignore  .gitmodules  Main.hs  README.md  hsubconvert.cabal  sources.txt
